--- a/Sistema.View/views/PessoasView.resx
+++ b/Sistema.View/views/PessoasView.resx
@@ -138,4 +138,28 @@
         gg3MzMzsWBUQwkDADMSsDAwMTADE2KYXvD6BIgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wABAQESYGBgtmBgYLYBAQER////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8AmpqZ2eTk5P/j4+P/YmJiwf///wD///8A////AP//
+        /wD///8A////AP///wD///8AAAAAD1RUVK0ZGRlhHBwcbtvb2vji4d//4eDf/93d3PMZGRlnHBwcZlBQ
+        UK0AAAAP////AP///wD///8A////AHd3dsX/////7u7t/u3t7P7n5+b/1tXT/9fW1P/j4uD/4uHf/uPi
+        4f3p6Ob/a2trwf///wD///8A////AP///wCEhITn+fn3/+/v7v/b29r/ysnJ/8nIxv/JyMf/ycjH/8vL
+        yf/m5eT/5eTi/319feX///8A////AP///wD///8AU1NTlfb19P/m5eT/v769/+vr6v/U09L/1tXU/+Lh
+        4f+0tLP/19bU/+Lh3/9JSUmN////AP///wAAAAAPYGBgtauqqufk4+L/0dDP//Dw7/+urq7/qKen8aqq
+        qvKsrKv/6Ojn/8vLyv/g393/oqKg5GBgYLUAAAAPNTU1beTk4//Y1tX/0tHQ/8XEw//t7Ov/jY2Nuv//
+        /wD///8An5+ezejn5v+2tbT/1tXT/+Lh4P/g4N//MTExZkJBQXbs6+j/2tnX/9TT0f/GxcT/3tzc/1BP
+        T37///8A////AGZmZZrd3Nv/yMbF/+Li4f/h4d//7u3s/z49PW9oaGhKkZGR69ra2fze3dz/y8rK/+bl
+        5f+kpKPhDw8PUBUVFVy5ubjr7u7s/8zLy//n5uX/3Nzb/JOTk+s6OjpD////AP///wCSkpHO4eDe/9nX
+        1v+4t7f/4eDf/9TT0/3k4+L99vb1/8DAv//q6ej/8/Py/4+Pjsn///8A////AP///wD///8ATExMkePi
+        4P/e3tz/4eDf/8zLy//Ew8L/z8/O/97e3f/w8O//8PDv//b29f9HR0eH////AP///wD///8AEhISAqem
+        pePl5OH/7u7t/+7u7f/r6+r/4+Lh/+jo5//q6un/8/Py//X19P/6+fj/qamp3////wD///8A////AP//
+        /wCkpKRvsrKw/qCgn+erqqrz6Ofm/+fm5f/t7ez/+/v6/7GxsfKkpKPnvr6+/piYl2j///8A////AP//
+        /wD///8A////AP///wCcnJwUampqDnZ2dqrv7u3/9PTz/3t7e6RycnILjo6OF////wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wBTU1NKn5+f8KCgoO80NDRD////AP///wD///8A////AP//
+        /wD///8A/D8AAPw/AADAAwAAwAMAAMADAADAAwAAAAAAAAGAAAABgAAAAAAAAMADAADAAwAAgAMAAMAD
+        AADwDwAA/D8AAA==
+</value>
+  </data>
 </root>
