--- a/Sistema.View/edits/EditVeiculos.resx
+++ b/Sistema.View/edits/EditVeiculos.resx
@@ -117,4 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAaAAAACgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaAAAAygAAAKAAAAAUAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACwAAAKAAAAD/AAAAowAA
+        ABQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUAAAAowAA
+        AP8AAACjAAAAFgAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAcwAAAIMAAACCAAAAgwAAAHMAAAAPAAAAAAAA
+        ABQAAACjAAAA/gAAAHYAAAAAAAAAAAAAAAAAAAAAAAAADwAAAHIAAACCAAAAgQAAAIIAAAByAAAADgAA
+        AAAAAAAAAAAAFgAAAHYAAABCAAAAZQAAABAAAAAAAAAAAAAAAAEAAAAFAAAABgAAAAUAAAAFAAAABgAA
+        AAgAAAAIAAAABgAAAAAAAAAAAAAAZAAAALcAAAAXAAAAAAAAAAAAAAAUAAAAmQAAAK4AAACtAAAArQAA
+        AK0AAACtAAAArwAAAIUAAAAKAAAAAAAAABAAAAAXAAAAAAAAAAAAAAAAAAAACQAAAEQAAABNAAAATQAA
+        AE0AAABNAAAATQAAAE4AAAA7AAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAYAAAAGwAA
+        ABsAAAAbAAAAGwAAABsAAAAcAAAAFQAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWAAAArgAA
+        AMYAAADEAAAAxAAAAMQAAADEAAAAxwAAAJYAAAALAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAA
+        ABwAAAAgAAAAHwAAAB8AAAAfAAAAHwAAACAAAAAYAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//8AAP4/AAD+HwAA/g8AAP8HAACAhwAAgMEAAIAxAACAEwAAgB8AAIAfAACAHwAAgB8AAP//
+        AAD//wAA//8AAA==
+</value>
+  </data>
 </root>
